# fitbit-takeout-extractor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-tests.yml
examples/: README.md  basic_example.py  examine_file_types.py  extract_calories.py  extract_heart_rate.py
examples/output/: README.md
fitbit_extractor/: __init__.py  command_line.py  core.py  utils.py
fitbit_extractor/extractors/: __init__.py  calories.py  heart_rate.py
tests/: __init__.py  conftest.py  test_fitbit_extractor.py
